Fixed overflow in toc sidebar

--- a/docs/site/css/docs.scss
+++ b/docs/site/css/docs.scss
@@ -1441,8 +1441,10 @@ select#contact-select {
       display: flex;
       flex-direction: column;
       gap: 24px;
+      max-width: 260px;
       padding-top: 24px;
       padding-right: 20px;
+      overflow: auto;
     }
 
     > .toc-sidebar {
